clusters/home/apps/entertainment/heimdall.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - image: lscr.io/linuxserver/heimdall:latest
        name: heimdall
        volumeMounts:
        - mountPath: /config
          name: config
        ports:
        - containerPort: 80
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
      volumes:
        - name: config
          hostPath:
            path: /home/entertainment/heimdall
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  labels:
    app: heimdall
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: heimdall
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall
  labels:
    app: heimdall
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-signin: https://iap.home.com/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth
    nginx.ingress.kubernetes.io/auth-cache-key: $cookie__oauth2_proxy
    nginx.ingress.kubernetes.io/auth-cache-duration: 200 202 10m, 401 0m
spec:
  tls:
  - hosts:
    - home.com
  rules:
  - host: home.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: heimdall
            port:
              number: 80
