clusters/home/apps/entertainment/jackett.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - image: lscr.io/linuxserver/jackett:latest
        name: jackett
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
        ports:
        - containerPort: 9117
        livenessProbe:
          tcpSocket:
            port: 9117
          initialDelaySeconds: 60
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 9117
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "1000m"
            memory: "2560Mi"
      volumes:
        - name: config
          hostPath:
            path: /home/entertainment/jackett/config
            type: Directory
        - name: downloads
          hostPath:
            path: /home/entertainment/jackett/downloads
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  ports:
  - port: 9117
    protocol: TCP
    targetPort: 9117
  selector:
    app: jackett
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  labels:
    app: jackett
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-signin: https://iap.home.com/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth
    nginx.ingress.kubernetes.io/auth-cache-key: $cookie__oauth2_proxy
    nginx.ingress.kubernetes.io/auth-cache-duration: 200 202 10m, 401 0m
spec:
  tls:
  - hosts:
    - jackett.home.com
  rules:
  - host: jackett.home.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              number: 9117
