clusters/home/apps/entertainment/ombi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  labels:
    app: ombi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
      - image: lscr.io/linuxserver/ombi:latest
        name: ombi
        volumeMounts:
        - mountPath: /config
          name: config
        ports:
        - containerPort: 3579
        livenessProbe:
          tcpSocket:
            port: 3579
          initialDelaySeconds: 600
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 3579
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "1000m"
            memory: "2560Mi"
      volumes:
        - name: config
          hostPath:
            path: /home/entertainment/ombi
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
  labels:
    app: ombi
spec:
  ports:
  - port: 3579
    protocol: TCP
    targetPort: 3579
  selector:
    app: ombi
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi
  labels:
    app: ombi
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - ombi.home.com
  rules:
  - host: ombi.home.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ombi
            port:
              number: 3579
