clusters/home/apps/entertainment/radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - image: lscr.io/linuxserver/radarr:latest
        imagePullPolicy: Always
        name: radarr
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: data
        ports:
        - containerPort: 7878
        livenessProbe:
          tcpSocket:
            port: 7878
          initialDelaySeconds: 600
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 7878
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          requests:
            cpu: "150m"
          limits:
            memory: "512Mi"
      volumes:
        - name: config
          hostPath:
            path: /home/entertainment/radarr
            type: Directory
        - name: data
          hostPath:
            path: /mnt/external
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  ports:
  - port: 7878
    protocol: TCP
    targetPort: 7878
  selector:
    app: radarr
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  labels:
    app: radarr
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-signin: https://iap.home.com/oauth2/start?rd=https://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth
    nginx.ingress.kubernetes.io/auth-cache-key: $cookie__oauth2_proxy
    nginx.ingress.kubernetes.io/auth-cache-duration: 200 202 10m, 401 0m
spec:
  tls:
  - hosts:
    - radarr.home.com
  rules:
  - host: radarr.home.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
