clusters/home/apps/entertainment/sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - image: lscr.io/linuxserver/sonarr:latest
        imagePullPolicy: Always
        name: sonarr
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: data
        ports:
        - containerPort: 8989
        livenessProbe:
          tcpSocket:
            port: 8989
          initialDelaySeconds: 600
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 8989
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          requests:
            cpu: "150m"
          limits:
            memory: "512Mi"
      volumes:
        - name: config
          hostPath:
            path: /home/entertainment/sonarr
            type: Directory
        - name: data
          hostPath:
            path: /mnt/external
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  ports:
  - port: 8989
    protocol: TCP
    targetPort: 8989
  selector:
    app: sonarr
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  labels:
    app: sonarr
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-signin: https://iap.home.com/oauth2/start?rd=https://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth
    nginx.ingress.kubernetes.io/auth-cache-key: $cookie__oauth2_proxy
    nginx.ingress.kubernetes.io/auth-cache-duration: 200 202 10m, 401 0m
spec:
  tls:
  - hosts:
    - sonarr.home.com
  rules:
  - host: sonarr.home.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
