clusters/home/apps/entertainment/transmission.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmission
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
      containers:
      - image: thisisqasim/transmission:latest
        name: transmission
        volumeMounts:
        - mountPath: /downloads
          name: downloads
        - mountPath: /etc/transmission-daemon/torrents
          name: torrents
        - mountPath: /etc/transmission-daemon/resume
          name: resume
        ports:
        - containerPort: 9091
        livenessProbe:
          tcpSocket:
            port: 9091
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 9091
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "3000m"
            memory: "5120Mi"
      volumes:
        - name: downloads
          hostPath:
            path: /mnt/external/Downloads
            type: Directory
        - name: torrents
          hostPath:
            path: /mnt/external/Torrents/torrent.
            type: Directory
        - name: resume
          hostPath:
            path: /mnt/external/Torrents/transmission
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  ports:
  - port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    app: transmission
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  labels:
    app: transmission
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-signin: https://iap.home.com/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth
    nginx.ingress.kubernetes.io/auth-cache-key: $cookie__oauth2_proxy
    nginx.ingress.kubernetes.io/auth-cache-duration: 200 202 10m, 401 0m
spec:
  tls:
  - hosts:
    - torrent.home.com
  rules:
  - host: torrent.home.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              number: 9091
